[package]
name = "openzwave-stateful"
version = "0.1.0"
authors = ["Julien Wajsberg <felash@gmail.com>"]

[dependencies]
log = "0.3"
serial_ports = { git = "https://github.com/dhylands/serial-ports-rs" }
"openzwave" = { git = "https://github.com/fxbox/openzwave-rust" }
notify = { git = "https://github.com/julienw/rsnotify", rev="55337a603db3d565af044762ef03adb4115c647a" }

